--- a/src/uLearn.Web/Views/Admin/_GroupMember.cshtml
+++ b/src/uLearn.Web/Views/Admin/_GroupMember.cshtml
@@ -4,15 +4,21 @@
 @using uLearn.Web.Views.Shared
 @using Ulearn.Common
 
-@model Database.Models.GroupMember
+@model GroupMember
 
-<li class="group__member">
+<li class="group__member" data-user-id="@Model.UserId">
 	<div>
 		<div class="pull-right">
 			<a href="@Url.Action("RemoveUserFromGroup", "Admin", new { groupId = Model.GroupId, userId = Model.UserId })" class="group__member__remove-link" title="Удалить @(Model.User.VisibleName) из группы">&times;</a>
 		</div>
 
-		@UserAvatar.ExtraSmallAvatar(Model.User)
+        <div class="checkbox checkbox-default checkbox-xsmall">
+            <input type="checkbox" name="group__member__remove-@Model.UserId" id="group__member__remove-@Model.UserId" class="group__member__remove-checkbox"/>
+            <label for="group__member__remove-@Model.UserId">
+                @UserAvatar.ExtraSmallAvatar(Model.User)
+            </label>
+        </div>
+        
         <span title="@Model.User.UserName">
             @if (User.HasSystemAccess(SystemAccessType.ViewAllProfiles) || User.IsSystemAdministrator())
             {
@@ -25,7 +31,7 @@
         </span>
 		@if (!string.IsNullOrEmpty(Model.User.Email))
 		{
-			<a href="mailto:@Model.User.Email">@Model.User.Email</a><text>,</text>
+			<a href="mailto:@Model.User.Email" title="@Model.User.Email">@Model.User.Email.TruncateWithEllipsis(30)</a><text>,</text>
 		}
 		@if (Model.AddingTime.HasValue)
 		{
