--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -129,13 +129,20 @@ p {
 }
 
 .revealed {
-	background-color: #313131;
+	background-color: #3369b7;
 	padding: 20px;
 	color: white !important;
+    margin-left: -20px;
+    margin-right: -20px;
 }
 
-.revealed .cm-s-pastel-on-dark.CodeMirror {
-	background-color: #313131;
+.revealed .cm-s-pastel-on-dark.CodeMirror,
+.revealed .cm-s-xq-dark.CodeMirror {
+	background-color: #3369b7;
+}
+
+.revealed .cm-s-xq-dark .CodeMirror-gutters {
+    background: #3369b7;
 }
 
 .revealed__description {
@@ -145,7 +152,7 @@ p {
 
 .revealed code {
 	color: white;
-	background-color: #39562d;
+	background-color: #231f7d;
 }
 
 .revealed h2 {
@@ -159,6 +166,10 @@ p {
 
 .revealed p:last-child {
 	margin: 0;
+}
+
+p + .revealed {
+    margin-top: 20px;
 }
 
 .statistic-container {
@@ -1019,14 +1030,15 @@ li.li-success {
 
 /* Instructors-only comments */
 .comments-for-instructors-only {
-    background-color: #313131;
+    background-color: #3369b7;
     padding: 20px;
     color: white !important;
     margin: 5px -20px 20px;
 }
 
-.comments-for-instructors-only .cm-s-pastel-on-dark.CodeMirror {
-    background-color: #313131;
+.comments-for-instructors-only .cm-s-pastel-on-dark.CodeMirror,
+.comments-for-instructors-only .cm-s-xq-dark.CodeMirror {
+    background-color: #3369b7;
 }
 
 .comments-for-instructors-only__description {
@@ -1057,32 +1069,78 @@ li.li-success {
 }
 
 .comments-for-instructors-only [name=commentText] {
-    background-color: #313131;
-    border: 1px solid rgba(100, 100, 100, 0.5);
+    background-color: #3369b7;
+    border: 1px solid white;
 }
 
 .comments-for-instructors-only [name=commentText]::placeholder {
-    color: #aaaaaa;
+    color: #ddf;
 }
 
+.comments-for-instructors-only .btn-primary {
+    background-color: #3369b7;
+    color: white;
+    border: 1px solid white;
+}
+
+.comments-for-instructors-only .btn-primary[disabled] {
+    color: #77aaf3;
+    border: 1px solid #77aaf3;
+}
+
+.comments-for-instructors-only .btn-primary[disabled]:hover,
+.comments-for-instructors-only .btn-primary[disabled]:focus,
+.comments-for-instructors-only .btn-primary[disabled]:active{
+    background-color: #3369b7;
+    border: 1px solid #77aaf3;
+}
+
+.comments-for-instructors-only .btn-primary:hover,
+.comments-for-instructors-only .btn-primary:focus,
+.comments-for-instructors-only .btn-primary:active {
+    background-color: #5b8cd4;
+    border: 1px solid white;
+}
+
+
+.comments-for-instructors-only .btn-link,
 .comments-for-instructors-only a,
 .comments-for-instructors-only a:hover,
 .comments-for-instructors-only a:focus,
 .comments-for-instructors-only a:active {
-    color: #a1caec;
+    color: #96dff1;
 }
 
 .comments-for-instructors-only .comment .comment__delete-link * {
     color: #ff9393;
 }
 
+.comments-for-instructors-only .comment .comment__likes-count:not(.is-liked):hover .glyphicon,
 .comments-for-instructors-only .comment .comment__likes-count.is-liked .glyphicon,
 .comments-for-instructors-only .comment .comment__likes-count.is-liked .comment__likes-count__counter {
     color: #f14747;
 }
 
 .comments-for-instructors-only .comment:not(.is-pinned) .label-switcher.comment__pinned {
-    background-color: #313131;
+    background-color: #3369b7;
+}
+
+.comments-for-instructors-only .comment:not(.is-correct-answer) .label-switcher.comment__correct-answer {
+    background-color: #3369b7;
+    color: #ddf;
+    border-color: #ddf;
+}
+
+.comments-for-instructors-only .comment.is-correct-answer .label-switcher.comment__correct-answer,
+.comments-for-instructors-only .comment.is-correct-answer .label-switcher.comment__correct-answer .glyphicon {
+    background-color: white;
+    color: #3369b7;
+}
+
+.comments-for-instructors-only .comment .comment__likes-count .glyphicon,
+.comments-for-instructors-only .comment .comment__publish-time,
+.comments-for-instructors-only .comment .comment__publish-time a {
+    color: white;
 }
 
 /* User avatars */
