Setting 100% mark for code review not sets prohibit futher checking flag
Press Esc to close review window

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -2216,6 +2216,10 @@ h1 .copy-group-link {
 	margin-right: 10px;
 }
 
+.exercise__score .exercise__other-score-container {
+	vertical-align: middle;
+}
+
 .exercise__score input {
 	display: inline-block;
 	width: auto;
