--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -9,7 +9,7 @@
 	<div class="row">
 		<h4 class="col-xs-12">
 			Добавить комментарий
-			<a class="exercise__close-review pull-right no-underline" href="#">&times;</a>
+			<a class="exercise__close-review pull-right no-underline" href="#" title="Закрыть окно (Esc)">&times;</a>
 		</h4>
 
 	</div>
@@ -59,15 +59,15 @@
                          */
 						var isActive = Model.Checking.IsChecked && Model.Checking.Score == score && block.MaxReviewScore >= 4;
 						isPercentScoreActive = isPercentScoreActive || isActive;
-						<button type="button" class="btn btn-default @(isActive ? "active" : "")" data-value="@score">@scorePercent%</button>
+						<button type="button" class="btn btn-default @(isActive ? "active" : "")" data-value="@score" data-percent="@scorePercent">@scorePercent%</button>
 					}
 				</div>
-				<div class="ib">
+				<div class="ib exercise__other-score-container">
 					@{
 						var displayOtherScoreInput = Model.Checking.IsChecked && !isPercentScoreActive;
 						var otherScoreInputDisplayProperty = displayOtherScoreInput ? "" : "display: none";
 					}
-                    <a href="#" class="exercise__other-score-link internal-page-link @(displayOtherScoreInput ? "" : "active")">Другая оценка</a>
+                    <a href="#" class="exercise__other-score-link internal-page-link @(displayOtherScoreInput ? "active" : "")">Другая оценка</a>
 					<input type="number" class="form-control" style="@otherScoreInputDisplayProperty" min="0" max="@block.MaxReviewScore" name="exerciseScore" required="required"
 							value="@(Model.Checking.IsChecked ? Model.Checking.Score.ToString() : "")"/>
 				</div>
